# inota

./: README.md
inota/: CMakeLists.txt  package.xml
inota_description/: CMakeLists.txt  package.xml
inota_description/urdf/: inota.urdf
inota_navigation/: CMakeLists.txt  package.xml
inota_navigation/launch/: agv_amcl.launch  agv_amcl1.launch  agv_amcl_rear.launch  agv_move_base.launch  agv_navigation.launch
inota_navigation/map/: cropped.pgm  cropped.yaml  eski_poiler.yaml  map.yaml  map25032021.yaml
inota_navigation/params/: agv_base_local.yaml  agv_common.yaml  agv_global.yaml  agv_local.yaml  agv_move_base.yaml
inota_navigation/src/: encoder_write.py
inota_simulation/: CMakeLists.txt  package.xml
inota_simulation/launch/: inota_depo.launch  inota_emptyworld.launch  inota_rviz.launch  inota_rviz_standalone.launch  inota_store.launch
inota_simulation/rviz/: urdf.rviz
inota_simulation/worlds/: evasec_store.world
