<?xml version="1.0"?>
<package format="2">
  <name>inota</name>
  <version>1.0.0</version>
  <description>The inota package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kerem.erdogmus@inovasyonmuhendislik.com">AKE</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>inota_description</exec_depend>
  <exec_depend>inota_simulation</exec_depend>
  <export><metapackage/></export>
  
</package>
